# mfg-audit

./: .env.example  .gitignore  .vercelignore  CLAUDE.md  README.md  app.py  pyproject.toml  requirements.txt
data/: china_index.json  defense_index.json  mfg_naics.csv
scripts/: calculate_trade_deficit.py  defense_index.py  generate_china_index.py  get_hs6_trade_deficit.py  mfg_concordance.py
static/: app.js  style.css
templates/: index.html
