[project]
name = "audit"
version = "0.1.0"
description = "US manufacturing trade analysis with China dependency and defense criticality metrics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "fastapi[all]>=0.128.0",
    "ipykernel>=7.1.0",
    "jinja2>=3.1.6",
    "openai>=2.15.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "ruff>=0.14.13",
    "uvicorn>=0.40.0",
]
